# sumpage

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lock.yml  publish.yml  python.yml
html_summary/: cli.py  summary.py
summarize/: summary.py
