[tool.poetry]
name = "sumpage"
version = "0.3.3"
description = ""
authors = ["narumi <toucans-cutouts0f@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
click = "^8.1.7"
httpx = "^0.27.0"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
langchain-openai = "^0.1.14"
langchain-text-splitters = "^0.2.2"
loguru = "^0.7.2"
lxml = "^5.2.1"
pypdf = "^4.2.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.5.1"
toml = "^0.10.2"

[tool.poetry.group.mypy.dependencies]
cffi = "^1.16.0"
cryptography = "^42.0.8"
lxml-stubs = "^0.5.1"
mypy = "^1.10.1"
pandas-stubs = "^2.2.2.240603"
pycparser = "^2.22"
referencing = "^0.35.1"
rpds-py = "^0.19.0"
tree-sitter = "^0.22.3"
types-beautifulsoup4 = "^4.12.0.20240511"
types-cffi = "^1.16.0.20240331"
types-colorama = "^0.4.15.20240311"
types-docutils = "^0.21.0.20240704"
types-hdbcli = "^2.21.0.20240621"
types-html5lib = "^1.1.11.20240228"
types-jsonschema = "^4.22.0.20240610"
types-pillow = "^10.2.0.20240520"
types-protobuf = "^5.27.0.20240626"
types-psutil = "^6.0.0.20240621"
types-psycopg2 = "^2.9.21.20240417"
types-pygments = "^2.18.0.20240506"
types-pymysql = "^1.1.0.20240524"
types-pyopenssl = "^24.1.0.20240425"
types-pytz = "^2024.1.0.20240417"
types-pyyaml = "^6.0.12.20240311"
types-redis = "^4.6.0.20240425"
types-regex = "^2024.5.15.20240519"
types-requests = "^2.32.0.20240622"
types-setuptools = "^70.2.0.20240704"
types-tqdm = "^4.66.0.20240417"
types-tree-sitter = "^0.20.1.20240311"
types-tree-sitter-languages = "^1.10.0.20240612"
types-xmltodict = "^0.13.0.3"

[tool.poetry.scripts]
sumpage = "sumpage.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
