[project]
name = "sumpage"
version = "0.3.3"
description = ""
readme = "README.md"
authors = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "click>=8.1.7",
    "httpx>=0.27.2",
    "langchain>=0.3.4",
    "langchain-community>=0.3.3",
    "langchain-openai>=0.2.3",
    "langchain-text-splitters>=0.3.0",
    "loguru>=0.7.2",
    "lxml>=5.3.0",
    "pypdf>=5.0.1",
    "python-dotenv>=1.0.1",
]
[project.scripts]
sumpage = "sumpage.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "pip>=24.2",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.1",
    "toml>=0.10.2",
    "lxml-stubs>=0.5.1",
    "pandas-stubs>=2.2.3.241009",
    "types-pillow>=10.2.0.20240822",
    "types-pymysql>=1.1.0.20240524",
    "types-pyyaml>=6.0.12.20240917",
    "types-pygments>=2.18.0.20240506",
    "types-beautifulsoup4>=4.12.0.20241020",
    "types-colorama>=0.4.15.20240311",
    "types-hdbcli>=2.22.0.20240924",
    "types-jsonschema>=4.23.0.20240813",
    "types-protobuf>=5.28.0.20240924",
    "types-psutil>=6.1.0.20241022",
    "types-psycopg2>=2.9.21.20241019",
    "types-redis>=4.6.0.20241004",
    "types-regex>=2024.9.11.20240912",
    "types-requests>=2.32.0.20241016",
    "types-setuptools>=75.2.0.20241025",
    "types-tqdm>=4.66.0.20240417",
    "types-tree-sitter>=0.20.1.20240311",
    "types-tree-sitter-languages>=1.10.0.20240612",
    "types-xmltodict>=0.14.0.20241009",
]

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
